Adjust holiday offer layout and modal behavior

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             <p class="tagline">Почему ARBITRAGE RAIDER?</p>
             <h2>Конвертируйте дисбаланс рынка в баланс на криптокошельке</h2>
             <p>
-              Сканер обрабатывает миллионы точек данных в реальном времени и показывает
-              лучшие возможности на рынке арбитража.
+              Сканер показывает лучшие возможности на рынке арбитража по скорости обработки данных.
             </p>
           </div>
           <div class="why__grid">
