feat: remove external link modal

--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@
                 зарабатываете здесь и сейчас. Однако перед началом совершения арбитражных
                 сделок, мы рекомендуем вам пройти
                 <strong class="link-highlight"
-                  ><a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2FCryptoLarin_bot%3Fstart%3Darbitrage" data-external-url="https://t.me/CryptoLarin_bot?start=arbitrage" target="_blank" rel="noopener noreferrer"
+                  ><a href="https://t.me/CryptoLarin_bot?start=arbitrage" target="_blank" rel="noopener noreferrer"
                     >бесплатный базовый курс</a
                   ></strong
                 >
@@ -1155,7 +1155,7 @@
             <div class="faq__answer">
               <p>
                 Основной риск заключается в
-                <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Fc%2F1554562737%2F905" data-external-url="https://t.me/c/1554562737/905" target="_blank" rel="noopener noreferrer"
+                <a class="link-glow" href="https://t.me/c/1554562737/905" target="_blank" rel="noopener noreferrer"
                   >несоблюдении риск-менджмента</a
                 >. Определите для себя
                 ту сумму, с которой вам будет комфортно работать в границах одной сделки.
@@ -1173,7 +1173,7 @@
             <div class="faq__answer">
               <p>
                 Да, у ARBITRAGE RAIDER есть реферальное и партнёрское направление. Напишите в
-                наш Telegram <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2FRAIDER_ADM" data-external-url="https://t.me/RAIDER_ADM" target="_blank" rel="noopener noreferrer">по этой ссылке</a>, и менеджер расскажет все детали.
+                наш Telegram <a class="link-glow" href="https://t.me/RAIDER_ADM" target="_blank" rel="noopener noreferrer">по этой ссылке</a>, и менеджер расскажет все детали.
               </p>
             </div>
           </article>
@@ -1199,14 +1199,14 @@
               <p>
                 Да, у нас есть
                 <strong class="link-highlight"
-                  ><a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2FCryptoLarin_bot%3Fstart%3Darbitrage" data-external-url="https://t.me/CryptoLarin_bot?start=arbitrage" target="_blank" rel="noopener noreferrer"
+                  ><a href="https://t.me/CryptoLarin_bot?start=arbitrage" target="_blank" rel="noopener noreferrer"
                     >бесплатный базовый курс</a
                   ></strong
                 >,
                 а также полноценные курсы, в которых рассказывается всё про арбитраж от самых
                 простых вещей до самых сложных. Помимо этого, мы проводим периодические
                 созвоны в
-                <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2F%2BRKsN26IZn5o2OGYy" data-external-url="https://t.me/+RKsN26IZn5o2OGYy" target="_blank" rel="noopener noreferrer"
+                <a class="link-glow" href="https://t.me/+RKsN26IZn5o2OGYy" target="_blank" rel="noopener noreferrer"
                   >канале</a
                 >
                 и публикуем полноценные статьи с полезной информацией.
@@ -1227,27 +1227,27 @@
               </p>
               <ul class="faq__cases">
                 <li>
-                  <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Farbitrage_soft%2F27" data-external-url="https://t.me/arbitrage_soft/27" target="_blank" rel="noopener noreferrer"
+                  <a class="link-glow" href="https://t.me/arbitrage_soft/27" target="_blank" rel="noopener noreferrer"
                     >123% чистой прибыли за 6 дней</a
                   >
                 </li>
                 <li>
-                  <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Farbitrage_soft%2F38" data-external-url="https://t.me/arbitrage_soft/38" target="_blank" rel="noopener noreferrer"
+                  <a class="link-glow" href="https://t.me/arbitrage_soft/38" target="_blank" rel="noopener noreferrer"
                     >290% за неделю арбитража</a
                   >
                 </li>
                 <li>
-                  <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Farbitrage_soft%2F50%3Fsingle" data-external-url="https://t.me/arbitrage_soft/50?single" target="_blank" rel="noopener noreferrer"
+                  <a class="link-glow" href="https://t.me/arbitrage_soft/50?single" target="_blank" rel="noopener noreferrer"
                     >1092$ или больше 2х за 1 арбитражный день</a
                   >
                 </li>
                 <li>
-                  <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Farbitrage_soft%2F61" data-external-url="https://t.me/arbitrage_soft/61" target="_blank" rel="noopener noreferrer"
+                  <a class="link-glow" href="https://t.me/arbitrage_soft/61" target="_blank" rel="noopener noreferrer"
                     >Можно ли прогнать в арбитраже 250 000$?</a
                   >
                 </li>
                 <li>
-                  <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Fc%2F1554562737%2F766" data-external-url="https://t.me/c/1554562737/766" target="_blank" rel="noopener noreferrer"
+                  <a class="link-glow" href="https://t.me/c/1554562737/766" target="_blank" rel="noopener noreferrer"
                     >Прирост к депозиту в 600% за месяц у новичка</a
                   >
                 </li>
@@ -1258,7 +1258,7 @@
         <p class="faq__note container">
           <strong>
             Полноценный раздел FAQ c интересными вопросами по арбитражу
-            <a class="link-glow" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2Fc%2F1554562737%2F913" data-external-url="https://t.me/c/1554562737/913" target="_blank" rel="noopener noreferrer">по этой ссылке</a
+            <a class="link-glow" href="https://t.me/c/1554562737/913" target="_blank" rel="noopener noreferrer">по этой ссылке</a
             >.
           </strong>
         </p>
@@ -1271,27 +1271,27 @@
           <p>Список CEX и DEX бирж с которыми мы работаем.</p>
         </div>
         <div class="exchanges__grid container">
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.binance.com%2Fru%2Factivity%2Freferral-entry%2FCPA%2Ftogether%3Fref%3DCPA_0097G2V6EU" data-external-url="https://www.binance.com/ru/activity/referral-entry/CPA/together?ref=CPA_0097G2V6EU" target="_blank" rel="noopener noreferrer">Binance</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fbingx.com%2Fpartner%2Fdefiraider%2F" data-external-url="https://bingx.com/partner/defiraider/" target="_blank" rel="noopener noreferrer">BingX</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.bitfinex.com%2Fsign-up%3Frefcode%3DV0SSh3CYq" data-external-url="https://www.bitfinex.com/sign-up?refcode=V0SSh3CYq" target="_blank" rel="noopener noreferrer">Bitfinex</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.bitget.com%2Fru%2Freferral%2Fregister%3Ffrom%3Dreferral%26clacCode%3D6HG7BX70" data-external-url="https://www.bitget.com/ru/referral/register?from=referral&clacCode=6HG7BX70" target="_blank" rel="noopener noreferrer">Bitget</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.bitmart.com%2Finvite%2FWx69je%2Fen" data-external-url="https://www.bitmart.com/invite/Wx69je/en" target="_blank" rel="noopener noreferrer">Bitmart</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fblofin.com%2Fregister%3Freferral_code%3DkjC7TW" data-external-url="https://blofin.com/register?referral_code=kjC7TW" target="_blank" rel="noopener noreferrer">Blofin</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fpartner.bybit.com%2Fb%2Fdefiraider" data-external-url="https://partner.bybit.com/b/defiraider" target="_blank" rel="noopener noreferrer">Bybit</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.coinex.com%2Fregister%3Frc%3Dfutga" data-external-url="https://www.coinex.com/register?rc=futga" target="_blank" rel="noopener noreferrer">Coinex</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fdedust.io%2F" data-external-url="https://dedust.io/" target="_blank" rel="noopener noreferrer">DeDust</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fswap.defillama.com%2F" data-external-url="https://swap.defillama.com/" target="_blank" rel="noopener noreferrer">DeFiLlama</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.gate.io%2Fsignup%2FUVJGUV0L%3Fref_type%3D102" data-external-url="https://www.gate.io/signup/UVJGUV0L?ref_type=102" target="_blank" rel="noopener noreferrer">Gate</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.htx.com%2Finvite%2Fru-ru%2F1f%3Finvite_code%3D75tr4" data-external-url="https://www.htx.com/invite/ru-ru/1f?invite_code=75tr4" target="_blank" rel="noopener noreferrer">Huobi</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fjup.ag%2F" data-external-url="https://jup.ag/" target="_blank" rel="noopener noreferrer">Jupiter</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.kucoin.com%2Fr%2Frf%2FQBS5G8ZJ" data-external-url="https://www.kucoin.com/r/rf/QBS5G8ZJ" target="_blank" rel="noopener noreferrer">Kucoin</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.lbank.com%2Fru%2Flogin%2F%3Ficode%3D1B7BJ" data-external-url="https://www.lbank.com/ru/login/?icode=1B7BJ" target="_blank" rel="noopener noreferrer">Lbank</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.mexc.com%2Fru-RU%2Facquisition%2Fcustom-sign-up%3FshareCode%3Dmexc-1QDB1" data-external-url="https://www.mexc.com/ru-RU/acquisition/custom-sign-up?shareCode=mexc-1QDB1" target="_blank" rel="noopener noreferrer">Mexc</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fokx.com%2Fjoin%2F7699709" data-external-url="https://okx.com/join/7699709" target="_blank" rel="noopener noreferrer">Okx</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.ourbit.com%2Fregister%3FinviteCode%3DN8QZ99" data-external-url="https://www.ourbit.com/register?inviteCode=N8QZ99" target="_blank" rel="noopener noreferrer">Ourbit</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fpoloniex.com%2Fsignup%3Fc%3DQW66ZWWW%26r%3D%25252Freferral%25252FtasksQW66ZWWW" data-external-url="https://poloniex.com/signup?c=QW66ZWWW&r=%252Freferral%252FtasksQW66ZWWW" target="_blank" rel="noopener noreferrer">Poloniex</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fston.fi%2F" data-external-url="https://ston.fi/" target="_blank" rel="noopener noreferrer">STONfi</a>
-          <a href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.xt.com%2Fru%2Faccounts%2Fregister%3Fref%3DEH7UJ4" data-external-url="https://www.xt.com/ru/accounts/register?ref=EH7UJ4" target="_blank" rel="noopener noreferrer">XT</a>
+          <a href="https://www.binance.com/ru/activity/referral-entry/CPA/together?ref=CPA_0097G2V6EU" target="_blank" rel="noopener noreferrer">Binance</a>
+          <a href="https://bingx.com/partner/defiraider/" target="_blank" rel="noopener noreferrer">BingX</a>
+          <a href="https://www.bitfinex.com/sign-up?refcode=V0SSh3CYq" target="_blank" rel="noopener noreferrer">Bitfinex</a>
+          <a href="https://www.bitget.com/ru/referral/register?from=referral&clacCode=6HG7BX70" target="_blank" rel="noopener noreferrer">Bitget</a>
+          <a href="https://www.bitmart.com/invite/Wx69je/en" target="_blank" rel="noopener noreferrer">Bitmart</a>
+          <a href="https://blofin.com/register?referral_code=kjC7TW" target="_blank" rel="noopener noreferrer">Blofin</a>
+          <a href="https://partner.bybit.com/b/defiraider" target="_blank" rel="noopener noreferrer">Bybit</a>
+          <a href="https://www.coinex.com/register?rc=futga" target="_blank" rel="noopener noreferrer">Coinex</a>
+          <a href="https://dedust.io/" target="_blank" rel="noopener noreferrer">DeDust</a>
+          <a href="https://swap.defillama.com/" target="_blank" rel="noopener noreferrer">DeFiLlama</a>
+          <a href="https://www.gate.io/signup/UVJGUV0L?ref_type=102" target="_blank" rel="noopener noreferrer">Gate</a>
+          <a href="https://www.htx.com/invite/ru-ru/1f?invite_code=75tr4" target="_blank" rel="noopener noreferrer">Huobi</a>
+          <a href="https://jup.ag/" target="_blank" rel="noopener noreferrer">Jupiter</a>
+          <a href="https://www.kucoin.com/r/rf/QBS5G8ZJ" target="_blank" rel="noopener noreferrer">Kucoin</a>
+          <a href="https://www.lbank.com/ru/login/?icode=1B7BJ" target="_blank" rel="noopener noreferrer">Lbank</a>
+          <a href="https://www.mexc.com/ru-RU/acquisition/custom-sign-up?shareCode=mexc-1QDB1" target="_blank" rel="noopener noreferrer">Mexc</a>
+          <a href="https://okx.com/join/7699709" target="_blank" rel="noopener noreferrer">Okx</a>
+          <a href="https://www.ourbit.com/register?inviteCode=N8QZ99" target="_blank" rel="noopener noreferrer">Ourbit</a>
+          <a href="https://poloniex.com/signup?c=QW66ZWWW&r=%252Freferral%252FtasksQW66ZWWW" target="_blank" rel="noopener noreferrer">Poloniex</a>
+          <a href="https://ston.fi/" target="_blank" rel="noopener noreferrer">STONfi</a>
+          <a href="https://www.xt.com/ru/accounts/register?ref=EH7UJ4" target="_blank" rel="noopener noreferrer">XT</a>
         </div>
       </section>
 
@@ -1328,16 +1328,14 @@
             <div class="community__actions">
               <a
                 class="btn btn--ghost"
-                href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2F%2BSvEae--a3OU0OGNi"
-                data-external-url="https://t.me/+SvEae--a3OU0OGNi"
+                href="https://t.me/+SvEae--a3OU0OGNi"
                 target="_blank"
                 rel="noopener noreferrer"
                 >ARBITRAGE RAIDER</a
               >
               <a
                 class="btn btn--ghost"
-                href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2F%2BRKsN26IZn5o2OGYy"
-                data-external-url="https://t.me/+RKsN26IZn5o2OGYy"
+                href="https://t.me/+RKsN26IZn5o2OGYy"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Larin | Арбитраж</a
@@ -1362,7 +1360,7 @@
             <p class="media-card__tag">Instagram</p>
             <h3>@alexeylarin</h3>
             <p>Разборы кейсов, оперативные новости, и просто лайфстайл</p>
-            <a class="btn btn--ghost" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.instagram.com%2Falexeylarin%3Figsh%3DMXNub241cDVmN3owZA%3D%3D" data-external-url="https://www.instagram.com/alexeylarin?igsh=MXNub241cDVmN3owZA==" target="_blank" rel="noopener noreferrer">Подписаться</a>
+            <a class="btn btn--ghost" href="https://www.instagram.com/alexeylarin?igsh=MXNub241cDVmN3owZA==" target="_blank" rel="noopener noreferrer">Подписаться</a>
           </article>
           <article class="media-card media-card--youtube">
             <span class="media-card__badge" aria-hidden="true">
@@ -1376,16 +1374,14 @@
             <div class="media__actions">
               <a
                 class="btn btn--ghost"
-                href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fyoutube.com%2F%40alexeylarin1%3Fsi%3D8A5SyzBTHFetjQcd"
-                data-external-url="https://youtube.com/@alexeylarin1?si=8A5SyzBTHFetjQcd"
+                href="https://youtube.com/@alexeylarin1?si=8A5SyzBTHFetjQcd"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Alexey Larin</a
               >
               <a
                 class="btn btn--ghost"
-                href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Fwww.youtube.com%2F%40arbitragesoft"
-                data-external-url="https://www.youtube.com/@arbitragesoft"
+                href="https://www.youtube.com/@arbitragesoft"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Arbitrage Soft</a
@@ -1413,7 +1409,7 @@
             <p class="media-card__tag">Telegram • Бот</p>
             <h3>CryptoLarin Bot — базовый курс</h3>
             <p>Бесплатный бот с лекциями и чек-листами, чтобы быстрее войти в арбитраж.</p>
-            <a class="btn btn--ghost" href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2FCryptoLarin_bot%3Fstart%3Darbitrage" data-external-url="https://t.me/CryptoLarin_bot?start=arbitrage" target="_blank" rel="noopener noreferrer">Начать обучение</a>
+            <a class="btn btn--ghost" href="https://t.me/CryptoLarin_bot?start=arbitrage" target="_blank" rel="noopener noreferrer">Начать обучение</a>
           </article>
         </div>
       </section>
@@ -1435,8 +1431,7 @@
             <p>Пишите по всем вопросам, связанным с доступом, оплатой и сотрудничеством.</p>
             <a
               class="btn btn--primary"
-              href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2FRAIDER_ADM"
-              data-external-url="https://t.me/RAIDER_ADM"
+              href="https://t.me/RAIDER_ADM"
               target="_blank"
               rel="noopener noreferrer"
               itemprop="sameAs"
@@ -1453,8 +1448,7 @@
             <p>Новости, обновления сервиса, обучающие блоки и многое другое. Для связи с админимстрацией пишите сообщение каналу.</p>
             <a
               class="btn btn--ghost"
-              href="https://arbitrage-raider-lending.ru/go/index.html?to=https%3A%2F%2Ft.me%2F%2BSvEae--a3OU0OGNi"
-              data-external-url="https://t.me/+SvEae--a3OU0OGNi"
+              href="https://t.me/+SvEae--a3OU0OGNi"
               target="_blank"
               rel="noopener noreferrer"
               itemprop="sameAs"
@@ -1470,7 +1464,7 @@
           <h2>Сайт ARBITRAGE RAIDER доступен только на своём домене</h2>
           <p>
             Проверяйте, что в адресной строке указан домен <strong>arbitrage-raider-lending.ru</strong>. Все сторонние ресурсы
-            открываются через промежуточную страницу и помечены как <em>External</em>.
+            открываются в новой вкладке и помечены как <em>External</em>.
           </p>
           <ul>
             <li>Если видите другой домен — это не наш сайт.</li>
